apollo-compiler/src/main/kotlin/com/homer/apollographql/apollo/compiler/parser/antlr/GraphSDLParser.java
// Generated from com/apollographql/apollo/compiler/parser/antlr/GraphSDL.g4 by ANTLR 4.5.3

package com.homer.apollographql.apollo.compiler.parser.antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GraphSDLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, SCHEMA=16, 
		QUERY=17, MUTATION=18, SUBSCRIPTION=19, ENUM=20, TYPE=21, IMPLEMENTS=22, 
		INTERFACE=23, UNION=24, SCALAR=25, INPUT=26, DIRECTIVE=27, REPEATABLE=28, 
		ON_KEYWORD=29, EXTEND=30, NAME=31, STRING=32, BLOCK_STRING=33, FLOAT=34, 
		INT=35, WS=36, COMMA=37, COMMENT=38, UNICODE_BOM=39, UTF8_BOM=40, UTF16_BOM=41, 
		UTF32_BOM=42;
	public static final int
		RULE_document = 0, RULE_schemaDefinition = 1, RULE_operationTypesDefinition = 2, 
		RULE_operationTypeDefinition = 3, RULE_operationType = 4, RULE_typeDefinition = 5, 
		RULE_enumTypeDefinition = 6, RULE_enumValuesDefinition = 7, RULE_enumValueDefinition = 8, 
		RULE_objectTypeDefinition = 9, RULE_implementsInterfaces = 10, RULE_implementsInterface = 11, 
		RULE_interfaceTypeDefinition = 12, RULE_fieldsDefinition = 13, RULE_fieldDefinition = 14, 
		RULE_argumentsDefinition = 15, RULE_argumentDefinition = 16, RULE_unionTypeDefinition = 17, 
		RULE_unionMemberTypes = 18, RULE_scalarTypeDefinition = 19, RULE_inputObjectDefinition = 20, 
		RULE_inputValuesDefinition = 21, RULE_inputValueDefinition = 22, RULE_directiveDefinition = 23, 
		RULE_directiveLocations = 24, RULE_directiveLocation = 25, RULE_typeSystemExtension = 26, 
		RULE_schemaExtension = 27, RULE_typeExtension = 28, RULE_objectTypeExtensionDefinition = 29, 
		RULE_interfaceTypeExtensionDefinition = 30, RULE_unionTypeExtensionDefinition = 31, 
		RULE_scalarTypeExtensionDefinition = 32, RULE_enumTypeExtensionDefinition = 33, 
		RULE_inputObjectTypeExtensionDefinition = 34, RULE_name = 35, RULE_type = 36, 
		RULE_namedType = 37, RULE_listType = 38, RULE_nonNullType = 39, RULE_description = 40, 
		RULE_defaultValue = 41, RULE_value = 42, RULE_intValue = 43, RULE_floatValue = 44, 
		RULE_booleanValue = 45, RULE_stringValue = 46, RULE_nullValue = 47, RULE_enumValue = 48, 
		RULE_listValue = 49, RULE_objectValue = 50, RULE_objectField = 51, RULE_directives = 52, 
		RULE_directive = 53, RULE_directiveArguments = 54, RULE_directiveArgument = 55;
	public static final String[] ruleNames = {
		"document", "schemaDefinition", "operationTypesDefinition", "operationTypeDefinition", 
		"operationType", "typeDefinition", "enumTypeDefinition", "enumValuesDefinition", 
		"enumValueDefinition", "objectTypeDefinition", "implementsInterfaces", 
		"implementsInterface", "interfaceTypeDefinition", "fieldsDefinition", 
		"fieldDefinition", "argumentsDefinition", "argumentDefinition", "unionTypeDefinition", 
		"unionMemberTypes", "scalarTypeDefinition", "inputObjectDefinition", "inputValuesDefinition", 
		"inputValueDefinition", "directiveDefinition", "directiveLocations", "directiveLocation", 
		"typeSystemExtension", "schemaExtension", "typeExtension", "objectTypeExtensionDefinition", 
		"interfaceTypeExtensionDefinition", "unionTypeExtensionDefinition", "scalarTypeExtensionDefinition", 
		"enumTypeExtensionDefinition", "inputObjectTypeExtensionDefinition", "name", 
		"type", "namedType", "listType", "nonNullType", "description", "defaultValue", 
		"value", "intValue", "floatValue", "booleanValue", "stringValue", "nullValue", 
		"enumValue", "listValue", "objectValue", "objectField", "directives", 
		"directive", "directiveArguments", "directiveArgument"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'{'", "'}'", "':'", "'&'", "'('", "')'", "'='", "'|'", "'@'", "'['", 
		"']'", "'!'", "'true'", "'false'", "'null'", "'schema'", "'query'", "'mutation'", 
		"'subscription'", "'enum'", "'type'", "'implements'", "'interface'", "'union'", 
		"'scalar'", "'input'", "'directive'", "'repeatable'", "'on'", "'extend'", 
		null, null, null, null, null, null, "','", null, null, "'\\uEFBBBF'", 
		"'\\uFEFF'", "'\\u0000FEFF'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, "SCHEMA", "QUERY", "MUTATION", "SUBSCRIPTION", 
		"ENUM", "TYPE", "IMPLEMENTS", "INTERFACE", "UNION", "SCALAR", "INPUT", 
		"DIRECTIVE", "REPEATABLE", "ON_KEYWORD", "EXTEND", "NAME", "STRING", "BLOCK_STRING", 
		"FLOAT", "INT", "WS", "COMMA", "COMMENT", "UNICODE_BOM", "UTF8_BOM", "UTF16_BOM", 
		"UTF32_BOM"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GraphSDL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GraphSDLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class DocumentContext extends ParserRuleContext {
		public List<SchemaDefinitionContext> schemaDefinition() {
			return getRuleContexts(SchemaDefinitionContext.class);
		}
		public SchemaDefinitionContext schemaDefinition(int i) {
			return getRuleContext(SchemaDefinitionContext.class,i);
		}
		public List<TypeDefinitionContext> typeDefinition() {
			return getRuleContexts(TypeDefinitionContext.class);
		}
		public TypeDefinitionContext typeDefinition(int i) {
			return getRuleContext(TypeDefinitionContext.class,i);
		}
		public DocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_document; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphSDLListener ) ((GraphSDLListener)listener).enterDocument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphSDLListener ) ((GraphSDLListener)listener).exitDocument(this);
		}
	}

	public final DocumentContext document() throws RecognitionException {
		DocumentContext _localctx = new DocumentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_document);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(114);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(112);
					schemaDefinition();
					}
					break;
				case 2:
					{
					setState(113);
					typeDefinition();
					}
					break;
				}
				}
				setState(116); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SCHEMA) | (1L << ENUM) | (1L << TYPE) | (1L << INTERFACE) | (1L << UNION) | (1L << SCALAR) | (1L << INPUT) | (1L << DIRECTIVE) | (1L << EXTEND) | (1L << STRING) | (1L << BLOCK_STRING))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SchemaDefinitionContext extends ParserRuleContext {
		public TerminalNode SCHEMA() { return getToken(GraphSDLParser.SCHEMA, 0); }
		public OperationTypesDefinitionContext operationTypesDefinition() {
			return getRuleContext(OperationTypesDefinitionContext.class,0);
		}
		public DescriptionContext description() {
			return getRuleContext(DescriptionContext.class,0);
		}
		public DirectivesContext directives() {
			return getRuleContext(DirectivesContext.class,0);
		}
		public SchemaDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_schemaDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphSDLListener ) ((GraphSDLListener)listener).enterSchemaDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphSDLListener ) ((GraphSDLListener)listener).exitSchemaDefinition(this);
		}
	}

	public final SchemaDefinitionContext schemaDefinition() throws RecognitionException {
		SchemaDefinitionContext _localctx = new SchemaDefinitionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_schemaDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			_la = _input.LA(1);
			if (_la==STRING || _la==BLOCK_STRING) {
				{
				setState(118);
				description();
				}
			}

			setState(121);
			match(SCHEMA);
			setState(123);
			_la = _input.LA(1);
			if (_la==T__8) {
				{
				setState(122);
				directives();
				}
			}

			setState(125);
			operationTypesDefinition();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperationTypesDefinitionContext extends ParserRuleContext {
		public List<OperationTypeDefinitionContext> operationTypeDefinition() {
			return getRuleContexts(OperationTypeDefinitionContext.class);
		}
		public OperationTypeDefinitionContext operationTypeDefinition(int i) {
			return getRuleContext(OperationTypeDefinitionContext.class,i);
		}
		public OperationTypesDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operationTypesDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphSDLListener ) ((GraphSDLListener)listener).enterOperationTypesDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphSDLListener ) ((GraphSDLListener)listener).exitOperationTypesDefinition(this);
		}
	}

	public final OperationTypesDefinitionContext operationTypesDefinition() throws RecognitionException {
		OperationTypesDefinitionContext _localctx = new OperationTypesDefinitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_operationTypesDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(T__0);
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << QUERY) | (1L << MUTATION) | (1L << SUBSCRIPTION) | (1L << STRING) | (1L << BLOCK_STRING))) != 0)) {
				{
				{
				setState(128);
				operationTypeDefinition();
				}
				}
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(134);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperationTypeDefinitionContext extends ParserRuleContext {
		public OperationTypeContext operationType() {
			return getRuleContext(OperationTypeContext.class,0);
		}
		public NamedTypeContext namedType() {
			return getRuleContext(NamedTypeContext.class,0);
		}
		public DescriptionContext description() {
			return getRuleContext(DescriptionContext.class,0);
		}
		public OperationTypeDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operationTypeDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphSDLListener ) ((GraphSDLListener)listener).enterOperationTypeDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphSDLListener ) ((GraphSDLListener)listener).exitOperationTypeDefinition(this);
		}
	}

	public final OperationTypeDefinitionContext operationTypeDefinition() throws RecognitionException {
		OperationTypeDefinitionContext _localctx = new OperationTypeDefinitionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_operationTypeDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			_la = _input.LA(1);
			if (_la==STRING || _la==BLOCK_STRING) {
				{
				setState(136);
				description();
				}
			}

			setState(139);
			operationType();
			setState(140);
			match(T__2);
			setState(141);
			namedType();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperationTypeContext extends ParserRuleContext {
		public TerminalNode QUERY() { return getToken(GraphSDLParser.QUERY, 0); }
		public TerminalNode MUTATION() { return getToken(GraphSDLParser.MUTATION, 0); }
		public TerminalNode SUBSCRIPTION() { return getToken(GraphSDLParser.SUBSCRIPTION, 0); }
		public OperationTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operationType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphSDLListener ) ((GraphSDLListener)listener).enterOperationType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphSDLListener ) ((GraphSDLListener)listener).exitOperationType(this);
		}
	}

	public final OperationTypeContext operationType() throws RecognitionException {
		OperationTypeContext _localctx = new OperationTypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_operationType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << QUERY) | (1L << MUTATION) | (1L << SUBSCRIPTION))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeDefinitionContext extends ParserRuleContext {
		public EnumTypeDefinitionContext enumTypeDefinition() {
			return getRuleContext(EnumTypeDefinitionContext.class,0);
		}
		public ObjectTypeDefinitionContext objectTypeDefinition() {
			return getRuleContext(ObjectTypeDefinitionContext.class,0);
		}
		public InterfaceTypeDefinitionContext interfaceTypeDefinition() {
			return getRuleContext(InterfaceTypeDefinitionContext.class,0);
		}
		public InputObjectDefinitionContext inputObjectDefinition() {
			return getRuleContext(InputObjectDefinitionContext.class,0);
		}
		public UnionTypeDefinitionContext unionTypeDefinition() {
			return getRuleContext(UnionTypeDefinitionContext.class,0);
		}
		public ScalarTypeDefinitionContext scalarTypeDefinition() {
			return getRuleContext(ScalarTypeDefinitionContext.class,0);
		}
		public DirectiveDefinitionContext directiveDefinition() {
			return getRuleContext(DirectiveDefinitionContext.class,0);
		}
		public TypeSystemExtensionContext typeSystemExtension() {
			return getRuleContext(TypeSystemExtensionContext.class,0);
		}
		public TypeDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphSDLListener ) ((GraphSDLListener)listener).enterTypeDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphSDLListener ) ((GraphSDLListener)listener).exitTypeDefinition(this);
		}
	}

	public final TypeDefinitionContext typeDefinition() throws RecognitionException {
		TypeDefinitionContext _localctx = new TypeDefinitionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_typeDefinition);
		try {
			setState(153);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(145);
				enumTypeDefinition();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(146);
				objectTypeDefinition();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(147);
				interfaceTypeDefinition();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(148);
				inputObjectDefinition();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(149);
				unionTypeDefinition();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(150);
				scalarTypeDefinition();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(151);
				directiveDefinition();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(152);
				typeSystemExtension();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EnumTypeDefinitionContext extends ParserRuleContext {
		public TerminalNode ENUM() { return getToken(GraphSDLParser.ENUM, 0); }
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public EnumValuesDefinitionContext enumValuesDefinition() {
			return getRuleContext(EnumValuesDefinitionContext.class,0);
		}
		public DescriptionContext description() {
			return getRuleContext(DescriptionContext.class,0);
		}
		public DirectivesContext directives() {
			return getRuleContext(DirectivesContext.class,0);
		}
		public EnumTypeDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_enumTypeDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphSDLListener ) ((GraphSDLListener)listener).enterEnumTypeDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphSDLListener ) ((GraphSDLListener)listener).exitEnumTypeDefinition(this);
		}
	}

	public final EnumTypeDefinitionContext enumTypeDefinition() throws RecognitionException {
		EnumTypeDefinitionContext _localctx = new EnumTypeDefinitionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_enumTypeDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			_la = _input.LA(1);
			if (_la==STRING || _la==BLOCK_STRING) {
				{
				setState(155);
				description();
				}
			}

			setState(158);
			match(ENUM);
			setState(159);
			name();
			setState(161);
			_la = _input.LA(1);
			if (_la==T__8) {
				{
				setState(160);
				directives();
				}
			}

			setState(163);
			enumValuesDefinition();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EnumValuesDefinitionContext extends ParserRuleContext {
		public List<EnumValueDefinitionContext> enumValueDefinition() {
			return getRuleContexts(EnumValueDefinitionContext.class);
		}
		public EnumValueDefinitionContext enumValueDefinition(int i) {
			return getRuleContext(EnumValueDefinitionContext.class,i);
		}
		public EnumValuesDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_enumValuesDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphSDLListener ) ((GraphSDLListener)listener).enterEnumValuesDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphSDLListener ) ((GraphSDLListener)listener).exitEnumValuesDefinition(this);
		}
	}

	public final EnumValuesDefinitionContext enumValuesDefinition() throws RecognitionException {
		EnumValuesDefinitionContext _localctx = new EnumValuesDefinitionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_enumValuesDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			match(T__0);
			setState(169);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SCHEMA) | (1L << QUERY) | (1L << MUTATION) | (1L << SUBSCRIPTION) | (1L << ENUM) | (1L << TYPE) | (1L << IMPLEMENTS) | (1L << INTERFACE) | (1L << UNION) | (1L << SCALAR) | (1L << INPUT) | (1L << DIRECTIVE) | (1L << ON_KEYWORD) | (1L << EXTEND) | (1L << NAME) | (1L << STRING) | (1L << BLOCK_STRING))) != 0)) {
				{
				{
				setState(166);
				enumValueDefinition();
				}
				}
				setState(171);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(172);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EnumValueDefinitionContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public DescriptionContext description() {
			return getRuleContext(DescriptionContext.class,0);
		}
		public DirectivesContext directives() {
			return getRuleContext(DirectivesContext.class,0);
		}
		public EnumValueDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_enumValueDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphSDLListener ) ((GraphSDLListener)listener).enterEnumValueDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphSDLListener ) ((GraphSDLListener)listener).exitEnumValueDefinition(this);
		}
	}

	public final EnumValueDefinitionContext enumValueDefinition() throws RecognitionException {
		EnumValueDefinitionContext _localctx = new EnumValueDefinitionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_enumValueDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(175);
			_la = _input.LA(1);
			if (_la==STRING || _la==BLOCK_STRING) {
				{
				setState(174);
				description();
				}
			}

			setState(177);
			name();
			setState(179);
			_la = _input.LA(1);
			if (_la==T__8) {
				{
				setState(178);
				directives();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObjectTypeDefinitionContext extends ParserRuleContext {
		public TerminalNode TYPE() { return getToken(GraphSDLParser.TYPE, 0); }
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public FieldsDefinitionContext fieldsDefinition() {
			return getRuleContext(FieldsDefinitionContext.class,0);
		}
		public DescriptionContext description() {
			return getRuleContext(DescriptionContext.class,0);
		}
		public ImplementsInterfacesContext implementsInterfaces() {
			return getRuleContext(ImplementsInterfacesContext.class,0);
		}
		public DirectivesContext directives() {
			return getRuleContext(DirectivesContext.class,0);
		}
		public ObjectTypeDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_objectTypeDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphSDLListener ) ((GraphSDLListener)listener).enterObjectTypeDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphSDLListener ) ((GraphSDLListener)listener).exitObjectTypeDefinition(this);
		}
	}
